--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button class="black-button" onclick="adicionarCaracter('5')">5</button>
         <button class="black-button" onclick="adicionarCaracter('6')">6</button>
         <button class="blue-button" onclick="adicionarCaracter('+')">+</button>
-        <button class="black-button" onclick="adicionarCaracter('1')">t</button>
+        <button class="black-button" onclick="adicionarCaracter('1')">1</button>
         <button class="black-button" onclick="adicionarCaracter('2')">2</button>
         <button class="black-button" onclick="adicionarCaracter('3')">3</button>
         <button class="equal-button" onclick="calcular()">=</button>
